--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/vercel-migration.js && prisma generate && next build",
+    "build": "node scripts/vercel-migration.js && node scripts/add-failed-payment-tracking.js && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "seed-admin": "node scripts/seed-admin.js",
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.7.1",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@types/nodemailer": "^7.0.2",
     "bcryptjs": "^2.4.3",
     "gamedig": "^5.3.2",
     "lucide-react": "^0.294.0",
@@ -24,6 +25,7 @@
     "minecraft-server-util": "^5.4.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.10.1",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
