Add admin account debugging scripts
- Add check-admin.js to verify admin account exists and password is correct
- Add recreate-admin.js to delete and recreate admin account if needed
- Add npm scripts for easy admin account management
- Help troubleshoot admin login issues

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "seed-admin": "node scripts/seed-admin.js",
+    "check-admin": "node scripts/check-admin.js",
+    "recreate-admin": "node scripts/recreate-admin.js",
     "postinstall": "prisma generate"
   },
   "dependencies": {
