Complete partner streamer management system
- Create PartnerStreamerManagement component with full CRUD functionality
- Add partner streamer migration script to build process
- Import and integrate component into staff dashboard
- Remove duplicate interface definitions
- Add comprehensive streamer management UI with:
  - Add/Edit/Delete streamers
  - Priority system (0-1000, higher = shown first)
  - Active/Inactive status toggle
  - Username and display name management
  - User tracking (who added each streamer)
  - Form validation and error handling
  - Loading states and user feedback
  - Info panel explaining how the system works

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/vercel-migration.js && node scripts/add-failed-payment-tracking.js && node scripts/add-auth-email-fields.js && node scripts/add-username-tracking.js && prisma generate && next build",
+    "build": "node scripts/vercel-migration.js && node scripts/add-failed-payment-tracking.js && node scripts/add-auth-email-fields.js && node scripts/add-username-tracking.js && node scripts/add-partner-streamers.js && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "seed-admin": "node scripts/seed-admin.js",
