Add complete Stripe payment and payout system with Connect Express
- Implement off-session payment support via Setup Intent
- Add Stripe Connect Express for server owner payouts
- Create smart optimization algorithm to reduce payments when servers are overfunded
- Add country selection system (45+ countries supported)
- Update withdrawal processing to use optimization and Connect transfers
- Add comprehensive documentation (8 guides for users, owners, and admins)
- Add API routes for Setup Intent, payment methods, and country selection
- Update Prisma schema with Stripe Connect fields and pledge status enum
- Add automated cron job configuration for monthly processing
- Include migration script for database updates
- Support individual accounts (no business required for server owners)
- Implement automatic daily payouts to bank accounts

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "framework": "nextjs",
+  "crons": [
+    {
+      "path": "/api/cron/process-withdrawals",
+      "schedule": "0 12 * * *"
+    }
+  ],
   "functions": {
     "app/api/**/*.ts": {
       "maxDuration": 30
